--- a/Titter/Base.lproj/Main.storyboard
+++ b/Titter/Base.lproj/Main.storyboard
@@ -72,20 +72,20 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ESPN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fzz-Qp-ZJc">
-                                                    <rect key="frame" x="79" y="8" width="38" height="17"/>
+                                                    <rect key="frame" x="61" y="8" width="38" height="17"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q8o-DR-lJe">
-                                                    <rect key="frame" x="8" y="8" width="63" height="63"/>
+                                                    <rect key="frame" x="8" y="8" width="45" height="45"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="63" id="D9h-PA-Lu5"/>
-                                                        <constraint firstAttribute="width" constant="63" id="t7N-Ao-oyI"/>
+                                                        <constraint firstAttribute="height" constant="45" id="D9h-PA-Lu5"/>
+                                                        <constraint firstAttribute="width" constant="45" id="t7N-Ao-oyI"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@espn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DNb-J4-zAX">
-                                                    <rect key="frame" x="121" y="9" width="39" height="15"/>
+                                                    <rect key="frame" x="103" y="9" width="39" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -97,7 +97,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTg-Wo-4ez">
-                                                    <rect key="frame" x="79" y="54" width="23" height="23"/>
+                                                    <rect key="frame" x="61" y="54" width="23" height="23"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="23" id="H69-t4-vDU"/>
                                                         <constraint firstAttribute="width" constant="23" id="bRr-Ph-hvW"/>
@@ -105,23 +105,29 @@
                                                     <state key="normal" image="reply-action-pressed_0"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afe-4t-rlo">
-                                                    <rect key="frame" x="125" y="54" width="23" height="23"/>
+                                                    <rect key="frame" x="107" y="54" width="23" height="23"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="23" id="ABF-Ku-Djw"/>
                                                         <constraint firstAttribute="height" constant="23" id="B03-Pp-6AT"/>
                                                     </constraints>
                                                     <state key="normal" image="retweet-action-pressed"/>
+                                                    <connections>
+                                                        <action selector="didPressRetweetButton:" destination="jgW-CT-wqR" eventType="touchUpInside" id="sTu-vK-lRA"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Mf-95-vMr">
-                                                    <rect key="frame" x="171" y="54" width="23" height="23"/>
+                                                    <rect key="frame" x="153" y="54" width="23" height="23"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="23" id="DgR-ZC-Ge3"/>
                                                         <constraint firstAttribute="height" constant="23" id="dc5-6L-JkX"/>
                                                     </constraints>
                                                     <state key="normal" image="like-action-pressed"/>
+                                                    <connections>
+                                                        <action selector="didPressLikeButton:" destination="jgW-CT-wqR" eventType="touchUpInside" id="isR-Bz-9Wh"/>
+                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main Tweet that can be long" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZE-Mc-eVT">
-                                                    <rect key="frame" x="79" y="33" width="233" height="17"/>
+                                                    <rect key="frame" x="61" y="33" width="251" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -210,7 +216,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xKl-3c-4U9">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="279"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="224"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sm3-HT-S3d">
                                         <rect key="frame" x="12" y="8" width="63" height="63"/>
@@ -332,14 +338,13 @@
                                     <constraint firstItem="sm3-HT-S3d" firstAttribute="leading" secondItem="xKl-3c-4U9" secondAttribute="leading" constant="12" id="GuO-L3-luU"/>
                                     <constraint firstItem="KlS-31-17Y" firstAttribute="top" secondItem="2Uj-AY-XOw" secondAttribute="bottom" constant="8" id="HUB-7o-bbW"/>
                                     <constraint firstItem="Ccd-gb-Q82" firstAttribute="leading" secondItem="sm3-HT-S3d" secondAttribute="leading" id="K8g-oI-WFH"/>
-                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="KlS-31-17Y" secondAttribute="bottom" constant="8" id="Nxk-QC-9OG"/>
+                                    <constraint firstAttribute="bottom" secondItem="KlS-31-17Y" secondAttribute="bottom" constant="8" id="Nxk-QC-9OG"/>
                                     <constraint firstItem="2Uj-AY-XOw" firstAttribute="leading" secondItem="7Uf-sp-T7g" secondAttribute="trailing" constant="61" id="OQU-AF-dBh"/>
                                     <constraint firstItem="aJz-LL-hIG" firstAttribute="leading" secondItem="sm3-HT-S3d" secondAttribute="leading" id="RHu-C2-35s"/>
                                     <constraint firstItem="LFA-7z-le7" firstAttribute="top" secondItem="DGn-fb-bzV" secondAttribute="bottom" constant="12" id="RYL-pc-jwL"/>
                                     <constraint firstItem="6eb-dD-8Pa" firstAttribute="leading" secondItem="bIG-cc-haX" secondAttribute="trailing" constant="21" id="SRK-J1-Bm9"/>
                                     <constraint firstItem="wl9-6x-RtQ" firstAttribute="top" secondItem="Ccd-gb-Q82" secondAttribute="bottom" constant="12" id="Sc2-if-bgV"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lGX-P1-vAC" secondAttribute="trailing" constant="8" id="TfW-kc-1HG"/>
-                                    <constraint firstAttribute="height" constant="279" id="Xgy-Vq-OHU"/>
                                     <constraint firstItem="XGF-cE-wEg" firstAttribute="top" secondItem="xKl-3c-4U9" secondAttribute="top" constant="24" id="Y3N-WS-sDO"/>
                                     <constraint firstItem="bIG-cc-haX" firstAttribute="leading" secondItem="wl9-6x-RtQ" secondAttribute="trailing" constant="4" id="Yfv-re-dh0"/>
                                     <constraint firstAttribute="trailing" secondItem="aJz-LL-hIG" secondAttribute="trailing" constant="8" id="bhL-UA-1RP"/>
@@ -370,6 +375,7 @@
                             <constraint firstItem="xKl-3c-4U9" firstAttribute="top" secondItem="grJ-U1-ucX" secondAttribute="bottom" id="DRi-zr-x4C"/>
                             <constraint firstItem="xKl-3c-4U9" firstAttribute="leading" secondItem="trN-Hx-yGy" secondAttribute="leading" id="SkT-oj-Obk"/>
                             <constraint firstAttribute="trailing" secondItem="xKl-3c-4U9" secondAttribute="trailing" id="ccy-9d-Fdb"/>
+                            <constraint firstItem="q8f-zu-DnB" firstAttribute="top" relation="greaterThanOrEqual" secondItem="xKl-3c-4U9" secondAttribute="bottom" constant="8" id="gOO-Tw-3w3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Tweet" id="kNN-Wg-858">
